Upgrade backend to Spring Boot 4.1 and frontend deps to latest, continue mood/pomodoro refactor
- Bump Spring Boot 3.4.4 -> 4.1.0 (Spring Framework 7, Jakarta EE 11), Gradle 8.13 -> 9.7.0,
  and Testcontainers BOM to 2.0.5; add spring-boot-starter-flyway, spring-boot-resttestclient,
  and spring-boot-restclient now required by Boot 4's modular auto-configuration
- Add centralized GlobalExceptionHandler and a migration enforcing NOT NULL constraints
- Update frontend dependencies to latest across the board (Next 16.3, React 19.2.8, Clerk 7,
  Tailwind 4.3.3, Vitest 4.1.10, etc.), holding TypeScript/ESLint/@vitejs-plugin-react back at
  the newest versions still supported by the rest of the toolchain
- Remove unused shadcn primitives (chart, pagination, resizable, carousel, sidebar) whose
  vendored code doesn't compile against the newer recharts/react-resizable-panels majors
- Fix new React Hooks lint rules by deriving state instead of syncing via effects in
  useTimer and MoodTracker, and rework FactorsSection's transient add-factor error handling
- Restructure Playwright/Vitest test setup and continue the mood tracker UI refactor